--- a/css/mp.css
+++ b/css/mp.css
@@ -26,6 +26,17 @@ td:nth-child(1) {
 	margin: 0 1em 1.4em 2em;
 }
 
+img{
+object-fit: cover;
+}
+
+/* Image caption */
+.caption{
+  font-size: 0.7em;
+  margin-bottom: 1.52em;
+  color: #8e8e8e;
+  text-align: center;
+}
 
 /* Hide element*/
 .hide{
@@ -58,14 +69,6 @@ td:nth-child(1) {
 .smaller > .content-wrap > p{
 	text-align: left;
 	margin-bottom: inherit;
-}
-
-#content{ 
-  /*margin-top: 11em;*/
-}
-
-.smaller-content{ 
-  /*margin-top: 10em!important;*/
 }
 
 .smaller > .content-wrap > div{
